# English

./: .gitignore  .pre-commit-config.yaml  .pypirc  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  run.sh  test.sh
docs/: main.md  main.tex
english/: image.py  main.py
english/examples/: dictionary.py  ex1.py  main.py
english/reporter/: __init__.py  _reporter.py
english/utilities/: __init__.py  _common.py  _oxford_learners_dictionaries.py  _phonetic.py  _phonetic_analysis.py  _regex_dict.py  _word.py
english/utils/: executor.py  file.py  ocr_processor.py  time_tokens.py
english/wrappers/: __init__.py  _logging.py  _memoize.py  _singleton.py  _trace.py
examples/: ea.md  ea.pickle  ea[^r].md  ea[^r].pickle  ear.md  ear.pickle  ee.md  ee.pickle  main.py  memoize_example.py  regex_dict_example.py  summary.md  trace_example.py
ocr/: base_executor.py  box.py  element.py  ocr.py  ocr_processor.py  pixel.py  popen_executor.py
ocr/orientation/: image.py  orientation.py
src/: html_to_image.py  main.py  oxford_learners_dictionaries.py  rhymezone.py
src/common/: __init__.py  _requests.py  _response.py  _types.py
src/english/: run.sh
src/frontend/: .pnp.cjs  package-lock.json  package.json
templates/: index.html
tests/: _creator.py  _xtest_pydantic.py  base_str.py  example.py  example2.py  example_01.py  open_ai_search.py  private.py  pydantic_test.py  query.py  run.sh  test.py  test_async_function.py  test_class_decorator.py  test_ocr.py  test_open_ai.py  test_regex_dict.py  try_dictionary.py  xyz.py
tiff/: __init__.py
(+47 files in other folders)
